# SEC-Rag

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: server.py
docs/: design-decisions.md  evaluation.md
eval/: generate_dataset.py  results_metadata_retrieval_final.csv  results_synthesis_eval_3-1.csv  results_synthesis_eval_final.csv  results_synthesis_eval_v3.csv  results_ticker_aware_mmr.csv  results_vector_search_baseline.csv  run_retrieval_eval.py  run_synthesis_eval.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatInput.tsx  DataQualityBadge.tsx  FeedbackBar.tsx  NodesSidebar.tsx  QueryPlanPanel.tsx  SourceChips.tsx  StreamingAnswer.tsx
frontend/src/hooks/: useQuery.ts
src/: build_index.py  company_matcher.py  filing_parser.py  index_loader.py  sec_query.py
src/prompts/: synthesis_v1.txt  synthesis_v2.txt  synthesis_v3.txt  synthesis_v4.txt  synthesis_v5.txt  synthesis_v6.txt
